[package]
name = "reverse-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper-reverse-proxy = "0.5"
hyper = { version = "0.14", features = ["full"] }
hyper-headers = "0.0.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.12.1", features = ["v4"] }
regex = "1.11.1"
cookie = "0.18.1"
valkey = "0.0.0-alpha5"